--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Principal</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <h1>Bienvenido</h1>
+    <p>Soy programador</p>
 </body>
 </html>
