--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Principal</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/Syntaxnodal.jpg" type="image/x-icon">
+    <title>Nodal Syntax</title>
 </head>
+
 <body>
-    <h1>Bienvenido</h1>
-    <p>Soy programador</p>
-    <p>Juego futobol</p>
+    <div class="dropdown-menu">
+        <img class="btn-menu logo" src="img/Syntaxnodal.jpg" alt="" srcset="" width="80px">
+        <div class="btn-menu item-menu inicio" id="inicio">Inicio</div>
+        <div class="btn-menu item-menu sobremi" id="sobremi">Sobre mi</div>
+        <div class="btn-menu item-menu proyectos" id="proyectos">Proyectos</div>
+        <div class="btn-menu item-menu servicios" id="servicios">Servicios</div>
+        <div class="btn-menu item-menu contacto" id="contacto">Contactos</div>
+    </div>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
