--- a/index.html
+++ b/index.html
@@ -11,13 +11,49 @@
 
 <body>
     <div class="dropdown-menu">
-        <img class="btn-menu logo" src="img/Syntaxnodal.jpg" alt="" srcset="" width="80px">
+        <!--Aqui va a ir mi logo-->
+        <img class="btn-menu logo" src="img/Syntaxnodal.jpg" alt="Imagen de logo" srcset="">
         <div class="btn-menu item-menu inicio" id="inicio">Inicio</div>
         <div class="btn-menu item-menu sobremi" id="sobremi">Sobre mi</div>
         <div class="btn-menu item-menu proyectos" id="proyectos">Proyectos</div>
         <div class="btn-menu item-menu servicios" id="servicios">Servicios</div>
         <div class="btn-menu item-menu contacto" id="contacto">Contactos</div>
     </div>
+    <main class="main">
+        <!--<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="border-radius: 20px;">
+            <path fill="#001a2a" fill-opacity="1"
+                d="M0,64L26.7,74.7C53.3,85,107,107,160,122.7C213.3,139,267,149,320,154.7C373.3,160,427,160,480,138.7C533.3,117,587,75,640,53.3C693.3,32,747,32,800,53.3C853.3,75,907,117,960,160C1013.3,203,1067,245,1120,234.7C1173.3,224,1227,160,1280,160C1333.3,160,1387,224,1413,256L1440,288L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z">
+            </path>
+        </svg>-->
+        <!--Carta de presentacion personal jaja-->
+        <div id="principal" class="visible item-main">
+
+            <div class="sub-principal">
+                <h1>NODAL SYNTAX</h1>
+                <blockquote>
+                    <cite style="font-size: 20px;">"Entusiasta de la programación que transforma diseños en experiencias web interactivas y
+                        fluidas."</cite>
+                </blockquote>
+            </div>
+
+            <div class="sub-data-me">
+                <h1>Ingenieria en ciencias de la computacion</h1>
+                <!--Ver mis proyectos-->
+                <button class="btn-me">Ver mis proyectos</button>
+                <!--Descargar mi cv-->
+                <button class="btn-me-two">Descargar mi cv</button>
+            </div>
+
+        </div>
+        <div id="recorrido" class="oculto item-main">Recorrido</div>
+        <div id="proypersonales" class="oculto item-main">Proyectos personales</div>
+        <!--Servicios personales-->
+        <div id="sctividades" class="oculto item-main">Servicios</div>
+        <div id="contactos" class="oculto item-main">Contactos</div>
+    </main>
+    <footer class="footer">
+        <p>Pie de pagina</p>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 
