--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
             <div class="sub-principal">
                 <h1>NODAL SYNTAX</h1>
                 <blockquote>
-                    <cite style="font-size: 20px;">"Entusiasta de la programación que transforma diseños en experiencias web interactivas y
+                    <cite style="font-size: 20px;">"Entusiasta de la programación que transforma diseños en experiencias
+                        web interactivas y
                         fluidas."</cite>
                 </blockquote>
             </div>
 
             <div class="sub-data-me">
-                <h1>Ingenieria en ciencias de la computacion</h1>
+                <h1>Tecnico en programacion | Estudiante de ingenieria</h1>
                 <!--Ver mis proyectos-->
                 <button class="btn-me">Ver mis proyectos</button>
                 <!--Descargar mi cv-->
@@ -45,7 +46,16 @@
             </div>
 
         </div>
-        <div id="recorrido" class="oculto item-main">Recorrido</div>
+        <div id="recorrido" class="oculto item-main">
+            <div class="about-me">
+                <h1>SOBRE MI</h1>
+                <h3>Tecnico en programacion | Estudiante de ciencias de la computacion</h3>
+                <p>"Soy Técnico en Programación y actualmente curso la carrera de Ingeniería en Ciencias de la Computación. 
+                Combinando mi formación práctica con el conocimiento teórico en profundidad, me apasiona desarrollar soluciones
+                 tecnológicas robustas y eficientes. Mi objetivo es seguir creciendo en el sector del software, aplicando un enfoque
+                  analítico y creativo a cada desafío de desarrollo."</p>
+            </div>
+        </div>
         <div id="proypersonales" class="oculto item-main">Proyectos personales</div>
         <!--Servicios personales-->
         <div id="sctividades" class="oculto item-main">Servicios</div>
